ckanext/saeoss/assets/css/saeoss.css
/* ... */
.form-row{
  margin-bottom: 30px;
}

#dataset-edit{
  background-color: #fff;
  border: 1px solid #e7e7e7;
}

#dataset-edit > div{
  padding: 0 10px 0 10px;
}

.repeating-fields-container{
  -moz-column-count: 2;
  column-count: 2;
}

label[for=field-responsible_party_contact_address-0-postal_code]{
  margin-top:14px;
}

label[for=field-contact_address-0-postal_code]{
  margin-top:14px;
}

label[for=field-online_resource-0-description]{
  margin-top:14px
}

.form-group {
  margin-bottom: 25px;
}

.form-group .info-block {
  font-size: 10px;
  margin-top: 0;
}

.footer-text > p{
  margin-bottom: 0;
}


.organization_dataset_custodian{
}

select[id$="field-dataset_custodian"]{
  background-color: #eee !important;
  opacity: 1 !important;
}

#browserAlert {
  background-color: #00000000;
}

#browserAlert .modal-header {
  display: flex;
}

#browserAlert .modal-header .modal-title {
  flex-grow: 1;
}

#browserAlert .modal-footer {
  display: flex;
}

#browserAlert label:after {
  content: "" !important;
}

/* Web Mapping */

#map{
  top: 0;
  button:0;
  margin: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: absolute;
}

